# version_git

./: CMakeLists.txt  readme.md  readme.txt
cmake/modules/: version.cpp.in
src/: main.cpp  version.h
